<package>
  <version>0.3.0</version>
  <name>odom_visualization</name>
  <description>
     odom_visualization
  </description>
  <author>Tolga Ozaslan</author>
  <license>BSD</license>
  <maintainer email="ozaslan@seas.upenn.edu">Tolga Ozaslan</maintainer>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>utils</build_depend>
  <build_depend>nav_msgs</build_depend>
<build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>
  
<run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>utils</run_depend>
  <run_depend>nav_msgs</run_depend>
<run_depend>std_msgs</run_depend>
  <run_depend>eigen</run_depend>
  
  <build_depend>cmake_modules</build_depend>


  <buildtool_depend>catkin</buildtool_depend>

</package>



