





<package>
  <version>0.3.0</version>
  <name>pose_utils</name>
  <description>
     pose_utils
  </description>
  <author>author</author>
  <license>BSD</license>
  <maintainer email="author@smo.edu">maintainer</maintainer>
  
  <build_depend>roscpp</build_depend>
  <build_depend>armadillo</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>armadillo</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>






